# py-cricinfo

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  changelog.md  cricketstats.code-workspace  docker-compose.yml  pycricinfo.code-workspace  pyproject.toml  readme.md  requirements-api.in  requirements-api.txt  requirements.in  requirements.txt  run_api.py
.githooks/: pre-push
.github/workflows/: docker-publish.yml  python-publish.yml
cricinfo/: config.py  output.py  output_scorecard.py  utils.py
cricinfo/api/endpoints/: wrapper.py
cricinfo/core/: api_helper.py  query.py
cricinfo/output_models/: ball_by_ball_page.py  common.py  scorecard.py
cricinfo/source_models/: __init__.py  athelete.py  batting.py  bowling.py  commentary.py  common.py  dismissal.py  linescores.py  match.py  match_note.py  official.py  player.py  roster.py  statistics.py  team.py  venue.py
pycricinfo/: __init__.py  api_helper.py  call_cricinfo_api.py  config.py  exceptions.py  output.py  player_pages.py  player_stats_pages.py  utils.py
pycricinfo/api/: server.py  utils.py
pycricinfo/api/endpoints/: match.py  play_by_play.py  player.py  raw.py  scorecard.py  seasons.py  team.py  wrapper.py
pycricinfo/core/: query.py
pycricinfo/cricinfo/: call_cricinfo_api.py
pycricinfo/models/output/: __init__.py  ball_by_ball_page.py  common.py  innings.py  scorecard.py
pycricinfo/models/source/: __init__.py
pycricinfo/output_models/: innings.py  scorecard.py
pycricinfo/search/: __init__.py  api_helper.py  call_cricinfo_api.py  seasons.py  series.py
pycricinfo/source_models/: __init__.py  linescores.py  statistics.py
pycricinfo/source_models/api/: linescores.py  match.py  match_basic.py  roster.py  statistics.py
pycricinfo/types/: __init__.py  match_types.py
tests/: test_loading.py  test_player_pages.py
tests/test_files/match/: 1381212.json  (+1 more)
(+34 files in other folders)
