[project]
name = "py-cricinfo"
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
version = { file = "version.txt" } 
dependencies = {file = ["requirements.txt"]}
optional-dependencies.api = { file = ["requirements-api.txt"] }

[project.scripts]
scorecard = 'cricinfo.output:print_scorecard'
ballbyball = 'cricinfo.output:print_ball_by_ball'

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"