[project]
name = "py-cricinfo"
version = "0.0.4"
description = "An API using py-cricinfo to collect data from ESPN Cricinfo"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = ["prettytable>=3.16.0", "pydantic>=2.11.5"]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
dev = ["ruff>=0.11.0"]

[project.scripts]
scorecard = 'cricinfo.output:print_scorecard'
ballbyball = 'cricinfo.output:print_ball_by_ball'

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.isort]
known-first-party = ["cricinfo"]
